@@ -185,6 +185,8 @@ t/Wikibase-Datatype-Struct-Value/03-obj2struct.t
 t/Wikibase-Datatype-Struct-Value/04-struct2obj.t
 t/Wikibase-Datatype-Struct/01-use.t
 t/Wikibase-Datatype-Struct/02-version.t
+t/Wikibase-Datatype-Struct/03-obj2struct.t
+t/Wikibase-Datatype-Struct/04-struct2obj.t
 xt/Wikibase-Datatype-Struct-Form/01-pod_coverage.t
 xt/Wikibase-Datatype-Struct-Form/02-pod.t
 xt/Wikibase-Datatype-Struct-Item/01-pod_coverage.t
