@@ -1,5 +1,7 @@
 0.13
  - Add Value::Lexeme to Wikibase::Datatype::Struct doc.
+ - Add obj2struct() and struct2obj() for main objects to
+   Wikibase::Datatype::Struct.
  - Regen examples.
 
 0.12 2023-10-27T23:15:03+02:00
